...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_step_detail"
                            android:layout_width="@dimen/description_text_width"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:visibility="gone"/>

                        <ImageView
...
                            android:visibility="gone"
                            android:layout_marginRight="@dimen/cv_horiz_margin"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv_ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</layout>
...
