<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/rv_top_margin"/>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="@dimen/loading_indicator_size"
        android:layout_width="@dimen/loading_indicator_size"
        android:layout_gravity="center"
        android:visibility="invisible" />
</merge>
